# ULM-R1

./: Install.md  README.md  pyproject.toml  setup.py  utils.py
corl/: setup.py
corl/open_r1/: grpo_janus_unify.py
corl/open_r1/rewards/: __init__.py  r_base.py  r_t2i.py  r_utils.py
corl/open_r1/trainer/: grpo_trainer_unified.py
janus/models/: image_processing_vlm.py  modeling_vlm.py  processing_vlm.py
scripts/: corl_unified.sh
